--- a/.github/workflows/build-publish-latest.yaml
+++ b/.github/workflows/build-publish-latest.yaml
@@ -28,10 +28,16 @@ jobs:
         run: |
           cd web
           npm run build
-      - name: Build image
-        run: |
-          docker build -t ${{ secrets.DOCKER_HUB_USERNAME }}/free-one-api:latest .
-      - name: Publish image
-        run: |
-          docker login -u ${{ secrets.DOCKER_HUB_USERNAME }} -p ${{ secrets.DOCKER_HUB_PASSWORD }}
-          docker push ${{ secrets.DOCKER_HUB_USERNAME }}/free-one-api:latest
+      # - name: Build image
+      #   run: |
+      #     docker build -t ${{ secrets.DOCKER_HUB_USERNAME }}/free-one-api:latest .
+      # - name: Publish image
+      #   run: |
+      #     docker login -u ${{ secrets.DOCKER_HUB_USERNAME }} -p ${{ secrets.DOCKER_HUB_PASSWORD }}
+      #     docker push ${{ secrets.DOCKER_HUB_USERNAME }}/free-one-api:latest
+      - name: Login to Registry
+        run: docker login --username=${{ secrets.DOCKER_HUB_USERNAME }} --password ${{ secrets.DOCKER_HUB_PASSWORD }}
+      - name: Create Buildx
+        run: docker buildx create --name mybuilder --use
+      - name: Build  # image name
+        run: docker buildx build --platform linux/arm64,linux/amd64 -t rockchin/free-one-api:latest . --push
