--- a/requirements.txt
+++ b/requirements.txt
@@ -10,3 +10,4 @@ g4f
 revTongYi
 colorlog
 git+https://github.com/Zai-Kun/reverse-engineered-chatgpt
+git+https://github.com/dd123-a/revTiangong.git
