添加kimi适配器接口

--- a/requirements.txt
+++ b/requirements.txt
@@ -11,3 +11,4 @@ revTongYi
 colorlog
 git+https://github.com/Zai-Kun/reverse-engineered-chatgpt
 git+https://github.com/dd123-a/revTiangong.git
+git+https://github.com/dd123-a/revkimi.git
